# avian_pickup

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: actor_with_collider.rs  full_setup.rs  manipulate_prop.rs  manipulate_prop_while_holding.rs  minimal.rs  nested_colliders.rs  obstacle.rs  play_catch.rs  prop_playground.rs  transforms.rs
examples/util/: mod.rs
src/: actor.rs  associated_colliders.rs  avian_util.rs  camera.rs  collider.rs  config.rs  cooldown.rs  event.rs  input.rs  interaction.rs  lib.rs  main.rs  math.rs  on_pressed_r.rs  output.rs  prop.rs  pull_object.rs  rng.rs  spatial_query.rs  spatial_query_filter.rs  util.rs  verb.rs
src/interaction/: drop.rs  hold.rs  mod.rs  pull.rs  throw.rs
src/interaction/hold/: components.rs  during_hold.rs  mod.rs  on_add_holding.rs  on_hold.rs  on_remove_holding.rs  set_velocities.rs  shadow_params.rs  simulate.rs  update.rs  update_error.rs  update_targets.rs
src/interaction/pull/: can_pull.rs  find_in_cone.rs  find_in_trace.rs  mod.rs
src/on_pressed_r/: associated_colliders.rs
src/pull_object/: associated_colliders.rs  can_pull.rs  candidate.rs  find_in_cone.rs  find_in_trace.rs
src/try_pickup/: associated_colliders.rs
